--- a/style.css
+++ b/style.css
@@ -1,139 +1,196 @@
 body {
-    background: #f7f7f7;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0px;
-    display: grid;
-    gap: 60px;
-    justify-items: center;
-    margin-top: 60px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  display: grid;
+  gap: 60px;
+  justify-items: center;
+  margin-top: 60px;
+  background-color: #f7f7f7;
+}
+
+img {
+  max-width: 100%;
+  display: block;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
 }
 
 p,
 h1,
 h2,
 h3 {
-    margin: 0px;
-}
-
-h1::before {
-    content: '';
-    background: #e21;
-    width: 60px;
-    height: 4px;
-    display: inline-block;
-    position: absolute;
-    top: 30px;
-    right: -30px;
+  margin: 0px;
 }
 
 p {
-    font-size: 20px;
-    line-height: 1.3;
+  font-size: 1.25rem;
+  line-height: 1.3;
 }
 
-.link {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
+.header {
+  display: grid;
+  gap: 60px;
+  justify-items: center;
 }
 
-.link a {
-    background: #fff;
-    padding: 15px 20px;
-    border-radius: 4px;
-    color: black;
-    text-transform: uppercase;
-    border: 3px solid transparent;
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
 }
 
-.link a:hover {
-    border: 3px solid red;
+.menu a {
+  display: block;
+  background: #ffffff;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  color: #000000;
+  text-transform: uppercase;
+  border: 2px solid #fff;
 }
 
-.content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    max-width: 1000px;
+.menu a:hover {
+  border-color: #e21;
 }
 
-.content img {
-    display: block;
-    max-width: 100%;
+.conteudo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 1000px;
 }
 
-.introduction {
-    position: relative;
-    background: #fff;
-    padding: 40px;
-    text-align: right;
-    display: grid;
-    align-content: center;
-    gap: 20px;
-    justify-items: end;
+.introducao {
+  background: #fff;
+  padding: 40px;
+  text-align: right;
+  position: relative;
+  display: grid;
+  gap: 20px;
+  align-content: center;
+  justify-items: end;
 }
 
-.details {
-    background: #e21;
-    width: 60px;
-    height: 4px;
-    display: inline-block;
-    position: absolute;
-    top: 30px;
-    right: -30px;
+.introducao h1 {
+  font-size: 2rem;
 }
 
-.button {
-    background: #e21;
-    color: #fff;
-    padding: 15px 30px;
-    border-radius: 4px;
-    text-decoration: none;
+.introducao::before {
+  content: "";
+  width: 60px;
+  height: 4px;
+  background: #e21;
+  position: absolute;
+  top: 30px;
+  right: -30px;
 }
 
-.button:hover {
-    background: rgb(169, 20, 6);
-    transition: .3s;
+.introducao-cover img {
+  object-fit: cover;
+  height: 100%;
 }
 
-.sub-title {
-    background-image: url(./onda.svg);
-    z-index: -1;
-    font-size: 64px;
-    color: #c6c6c6;
-    text-align: right;
-    padding: 40px;
-    align-self: center;
+.botao {
+  background: #e21;
+  color: #fff;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  text-transform: uppercase;
 }
 
-.benefits {
-    background: #fff;
-    padding: 40px;
+.botao:hover {
+  background: #900;
 }
 
-.benefits-item {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    gap: 10px 20px;
-    padding: 20px;
+.subtitulo {
+  font-size: 4rem;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.2);
+  text-align: right;
+  padding: 40px;
+  align-self: center;
+  background-image: url("./img/onda.svg");
+  /* word-break: break-all; */
 }
 
-.benefits-item:hover {
-    border-left: 5px solid #e21;
+.vantagens {
+  background: #fff;
+  padding: 40px;
 }
 
-li::cue-region(3) .benefits-item p {
-    grid-column: 2;
+.vantagens-item {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 10px 20px;
+  padding: 20px;
+  border-left: 4px solid transparent;
 }
 
-.footer {
-    background: #fff;
-    width: 100%;
+.vantagens-item:nth-child(odd) {
+  background: #f7f7f7;
+}
+
+.vantagens-item:hover {
+  border-color: #e21;
+}
+
+.vantagens-item p {
+  grid-column: 2;
+}
+
+.rodape {
+  background: #fff;
+  width: 100%;
+  text-align: center;
+  padding: 40px;
+  box-sizing: border-box;
+}
+
+@media (max-width: 1000px) {
+  .conteudo-vantagem {
+    grid-template-columns: 1fr;
+  }
+  .subtitulo {
     text-align: center;
-    padding: 40px;
-    box-sizing: border-box;
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    gap: 30px;
+    margin-top: 20px;
+  }
+  .header {
+    gap: 30px;
+  }
+  .conteudo {
+    grid-template-columns: 1fr;
+  }
+  .introducao {
+    text-align: left;
+    justify-items: start;
+  }
+  .introducao::before {
+    display: none;
+  }
+  .subtitulo {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .subtitulo {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1rem;
+  }
 }
